feat: update .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,3 +4,5 @@ pull:
   script:
   - echo 'Starting deploy'
   - sudo git -C /root/alltitude pull
+  - echo 'Build Nuxt'
+  - sudo yarn --cwd /root/alltitude/ build
