--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ before_script:
   - sudo chown -R gitlab-runner:gitlab-runner .
 deploy:
   script:
-  - echo 'Starting Testss'
+  - echo 'Starting Tests'
   - sudo rm -rf yarn.lock 
   - sudo yarn
   - sudo chown -R gitlab-runner:gitlab-runner .
