--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ variables:
   GIT_STRATEGY: none
 before_script:
   - sudo apt-get update
+  - sudo git reset --hard origin/master
 testing:
   stage: build
   script:
