--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,13 +2,16 @@ variables:
   GIT_STRATEGY: none
 before_script:
   - sudo apt-get update
+installing:
+  stage: build
+  script:
+  - echo 'Manually'
   - sudo git clone git@gitlab.com:pcr2043/alltitude.git
+  - sudo yarn 
 testing:
   stage: build
   script:
   - echo 'Starting Tests'
-  - sudo yarn
-  - sudo chown -R gitlab-runner:gitlab-runner .
   - sudo yarn test 
 deploing:
   stage: test
