--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ installing:
   stage: build
   script:
   - echo 'Manually'
+  - sudo rm -rf alltitude
   - sudo git clone git@gitlab.com:pcr2043/alltitude.git
   - sudo yarn 
 testing:
