--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,13 @@
 variables:
   GIT_STRATEGY: none
-before_script:
-  - sudo apt-get update
-installing:
-  stage: build
-  script:
-  - echo 'Manually'
-  - sudo rm -rf alltitude
-  - sudo git clone git@gitlab.com:pcr2043/alltitude.git
-  - sudo yarn 
 testing:
   stage: build
   script:
+  - echo 'Cloning'
+  - sudo rm -rf alltitude
+  - sudo git clone git@gitlab.com:pcr2043/alltitude.git && sudo yarn 
   - echo 'Starting Tests'
-  - sudo yarn test 
+  - sudo git clone git@gitlab.com:pcr2043/alltitude.git && sudo yarn && sudo yarn test 
 deploing:
   stage: test
   script:
