--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,8 @@ variables:
 testing:
   stage: build
   script:
-  - echo 'Cloning'
-  - sudo rm -rf alltitude
-  - sudo git clone git@gitlab.com:pcr2043/alltitude.git && sudo yarn 
-  - echo 'Starting Tests'
-  - sudo git clone git@gitlab.com:pcr2043/alltitude.git && sudo yarn && sudo yarn test 
+  - echo 'Cloning and Testing'
+  - sudo rm -rf alltitude && sudo git clone git@gitlab.com:pcr2043/alltitude.git && sudo yarn && sudo yarn test
 deploing:
   stage: test
   script:
