--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ testing:
   stage: build
   script:
   - echo 'Cloning and Testing'
-  - sudo rm -rf alltitude/alltitude; sudo git clone git@gitlab.com:pcr2043/alltitude.git; sudo yarn; sudo yarn test;
+  - sudo rm -rf alltitude/alltitude; sudo git clone git@gitlab.com:pcr2043/alltitude.git; sudo yarn --cwd alltitude/ ; sudo yarn --cwd alltitude/ test;
 deploing:
   stage: test
   script:
