--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,7 @@
-variables:
-  GIT_STRATEGY: none
 testing:
   stage: build
   script:
-  - echo 'Cloning and Testing'
-  - sudo rm -rf alltitude/alltitude; sudo git clone git@gitlab.com:pcr2043/alltitude.git; sudo yarn --cwd alltitude/ ; sudo yarn --cwd alltitude/ test;
+  - echo 'Testing'
 deploing:
   stage: test
   script:
