--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,3 +15,5 @@ deploing:
   stage: test
   script:
   - echo 'Starting deploy'
+  - git -C /root/alltitude pull
+  - npm --cwd /root/alltitude/ build
