--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .js,.vue --ignore-path .eslintignore . ",
     "precommit": "npm run lint",
     "test": "jest",
     "build:pages": "cross-env NODE_ENV=GH_PAGES nuxt generate"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "express-htaccess-middleware": "^0.1.0",
     "i": "^0.3.6",
     "npm": "^6.9.0",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "php-express": "^0.0.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
